Add much code for functionality

--- a/index.html
+++ b/index.html
@@ -22,19 +22,26 @@
 
     <div class="body">
 
-        <div class="section-one">
-            Section 1
+        <div class="section-one section">
+            <div class="section-one-left">
+                <div id="text1">This Website is awesome</div>
+                <div id="text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                <div id="text3"> <button>Sign Up</button> </div>
+            </div>
+            <div class="section-one-right">
+                <img src="./images/image1.jpg">
+            </div>
         </div>
         
-        <div class="section-two">
+        <div class="section-two section">
             Section 1
         </div>
 
-        <div class="section-three">
+        <div class="section-three section">
             Section 1
         </div>
 
-        <div class="section-four">
+        <div class="section-four section">
             Section 1
         </div>
     </div>
